// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flow: json messages 1`] = `
Array [
  Array [
    "Cannot assign \`c\` to \`check2\` because number [1] is incompatible with string [2] in type argument \`Payload\` [3].",
  ],
  Array [
    "Cannot assign \`e\` to \`check4\` because number [1] is incompatible with string [2] in type argument \`State\` [3].",
  ],
  Array [
    "Cannot assign \`g\` to \`check6\` because string [1] is incompatible with number [2] in type argument \`Payload\` [3].",
  ],
  Array [
    "Cannot assign \`computed\` to \`check2\` because string [1] is incompatible with number [2] in type argument \`Payload\` [3].",
  ],
  Array [
    "Cannot assign \`createStore(...)\` to \`store2\` because number [1] is incompatible with string [2] in type argument \`State\` [3].",
  ],
  Array [
    "Cannot assign \`computed\` to \`check2\` because string [1] is incompatible with number [2] in type argument \`State\` [3].",
  ],
  Array [
    "Cannot call \`createDomain\` with \`234\` bound to \`domainName\` because number [1] is incompatible with string [2].",
  ],
  Array [
    "Cannot call \`createDomain\` with object literal bound to \`domainName\` because object literal [1] is incompatible with string [2].",
  ],
  Array [
    "Cannot assign \`initialProps.id\` to \`check2\` because number [1] is incompatible with string [2].",
  ],
  Array [
    "Cannot get \`initialProps.unknownProp\` because property \`unknownProp\` is missing in object type [1].",
  ],
  Array [
    "Cannot assign \`state.text\` to \`check2\` because string [1] is incompatible with number [2].",
  ],
]
`;

exports[`Flow: rejected 1`] = `
"Command failed: npx tsc -p src/types

src/types/types.test.ts(30,11): error TS2322: Type 'Event<number>' is not assignable to type 'Event<string>'.
  Type 'number' is not assignable to type 'string'.
src/types/types.test.ts(36,11): error TS2322: Type 'Event<number>' is not assignable to type 'Event<string>'.
src/types/types.test.ts(42,11): error TS2322: Type 'Event<string>' is not assignable to type 'Event<number>'.
  Type 'string' is not assignable to type 'number'.
src/types/types.test.ts(55,11): error TS2322: Type 'Event<string>' is not assignable to type 'Event<number>'.
src/types/types.test.ts(70,11): error TS2322: Type 'Store<number>' is not assignable to type 'Store<string>'.
  Type 'number' is not assignable to type 'string'.
src/types/types.test.ts(121,11): error TS2322: Type 'Store<string>' is not assignable to type 'Store<number>'.
  Type 'string' is not assignable to type 'number'.
src/types/types.test.ts(164,17): error TS2345: Argument of type '(state: any, payload: any, type: any) => void' is not assignable to parameter of type '(state: number, payload: undefined) => any'.
src/types/types.test.ts(164,18): error TS7006: Parameter 'state' implicitly has an 'any' type.
src/types/types.test.ts(164,25): error TS7006: Parameter 'payload' implicitly has an 'any' type.
src/types/types.test.ts(164,34): error TS7006: Parameter 'type' implicitly has an 'any' type.
src/types/types.test.ts(168,24): error TS2345: Argument of type '(state: any, payload: any, type: any) => void' is not assignable to parameter of type '(state: number, payload: number) => any'.
src/types/types.test.ts(168,25): error TS7006: Parameter 'state' implicitly has an 'any' type.
src/types/types.test.ts(168,32): error TS7006: Parameter 'payload' implicitly has an 'any' type.
src/types/types.test.ts(168,41): error TS7006: Parameter 'type' implicitly has an 'any' type.
src/types/types.test.ts(173,20): error TS2345: Argument of type '(state: any, payload: any, type: any) => void' is not assignable to parameter of type '(state: string, payload: undefined) => any'.
src/types/types.test.ts(173,21): error TS7006: Parameter 'state' implicitly has an 'any' type.
src/types/types.test.ts(173,28): error TS7006: Parameter 'payload' implicitly has an 'any' type.
src/types/types.test.ts(173,37): error TS7006: Parameter 'type' implicitly has an 'any' type.
src/types/types.test.ts(177,27): error TS2345: Argument of type '(state: any, payload: any, type: any) => void' is not assignable to parameter of type '(state: string, payload: number) => any'.
src/types/types.test.ts(177,28): error TS7006: Parameter 'state' implicitly has an 'any' type.
src/types/types.test.ts(177,35): error TS7006: Parameter 'payload' implicitly has an 'any' type.
src/types/types.test.ts(177,44): error TS7006: Parameter 'type' implicitly has an 'any' type.
src/types/types.test.ts(203,34): error TS2345: Argument of type '234' is not assignable to parameter of type 'string | undefined'.
src/types/types.test.ts(204,34): error TS2345: Argument of type '{ foo: boolean; }' is not assignable to parameter of type 'string'.
src/types/types.test.ts(248,15): error TS2322: Type 'number' is not assignable to type 'string'.
src/types/types.test.ts(249,45): error TS2339: Property 'unknownProp' does not exist on type '{ id: number; }'.
src/types/types.test.ts(254,15): error TS2322: Type 'string' is not assignable to type 'number'.
"
`;

exports[`TypeScript: rejected 1`] = `
"Command failed: npx tsc -p src/types

src/types/types.test.ts(30,11): error TS2322: Type 'Event<number>' is not assignable to type 'Event<string>'.
  Type 'number' is not assignable to type 'string'.
src/types/types.test.ts(36,11): error TS2322: Type 'Store<number>' is not assignable to type 'Store<string>'.
  Type 'number' is not assignable to type 'string'.
src/types/types.test.ts(42,11): error TS2322: Type 'Event<string>' is not assignable to type 'Event<number>'.
  Type 'string' is not assignable to type 'number'.
src/types/types.test.ts(55,11): error TS2322: Type 'Event<string>' is not assignable to type 'Event<number>'.
src/types/types.test.ts(70,11): error TS2322: Type 'Store<number>' is not assignable to type 'Store<string>'.
src/types/types.test.ts(121,11): error TS2322: Type 'Store<string>' is not assignable to type 'Store<number>'.
  Type 'string' is not assignable to type 'number'.
src/types/types.test.ts(203,34): error TS2345: Argument of type '234' is not assignable to parameter of type 'string | undefined'.
src/types/types.test.ts(204,34): error TS2345: Argument of type '{ foo: boolean; }' is not assignable to parameter of type 'string'.
src/types/types.test.ts(248,15): error TS2322: Type 'number' is not assignable to type 'string'.
src/types/types.test.ts(249,45): error TS2339: Property 'unknownProp' does not exist on type '{ id: number; }'.
src/types/types.test.ts(254,15): error TS2322: Type 'string' is not assignable to type 'number'.
"
`;
